<resources>
    <string name="app_name">ScreenBindger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_bindger">Screen Bindger</string>
    <string name="full_name_placeholder">Full name</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="date_of_birth_placeholder">Date of birth</string>
    <string name="register_placeholder">Register</string>
    <string name="already_have_an_account_placeholder">Already have an account? Login </string>
    <string name="here_placeholder">" here"</string>
    <string name="email_required_placeholder">Email (Required)</string>
    <string name="full_name_required_placeholder">Full name (Required)</string>
    <string name="password_required_placeholder">Password (Required)</string>
    <string name="login_placeholder">Login</string>
    <string name="do_not_have_account_placeholder">"Don't have an account? Register "</string>
    <string name="login_success_message">Hello Bindger :) !</string>
    <string name="login_fail_message">Failed to login !</string>
    <string name="profile_placeholder">Profile</string>
    <string name="search_placeholder">Search</string>
    <string name="notification_placeholder">Notification</string>
    <string name="trending_placeholder">Trending</string>
    <string name="upcoming_placeholder">Upcoming</string>
    <string name="rating_placeholder">Rating:</string>
    <string name="lorem">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="cast_placeholder">"Cast: "</string>
    <string name="real_name_placeholder">Real name</string>
    <string name="movie_name_placeholder">Movie name</string>
    <string name="show_more">" Show more"</string>
    <string name="show_less">" Show less"</string>
    <string name="message_updated_profile_success">Updated! Now go bindging ! :)</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="message_logout">Logout? Really? I would rather keep bindging...</string>
    <string name="hello_binger">Hello bindger! :)</string>
    <string name="genres_placeholder">Genres</string>
    <string name="no_user_found">No account with entered email.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="register_fail_message">Failed to register !</string>
    <string name="message_updated_profile_fail">Failed to update profile...</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
    <string name="message_old_new_password_same">Old password can not be the same as new password.</string>
    <string name="message_passwords_not_match">New password not properly confirmed</string>
    <string name="message_new_password_empty">New password can not be empty</string>
    <string name="message_update_success">Successful update ! :)</string>
    <string name="message_update_fail">Failed to update...</string>
    <string name="message_upload_image_fail">Failed to update the image</string>
    <string name="message_download_image_error">Failed to download profile image</string>
    <string name="message_load_image_from_gallery_error">Error loading picture from gallery</string>
    <string name="tmdb_username_placeholder">TMDB username</string>
    <string name="tmdb_password_placeholder">TMDB password</string>
    <string name="message_title_token_auth_failed">Token not authenticated</string>
    <string name="message_body_token_auth_failed">Please login/register on TMDB and follow the steps.</string>
    <string name="message_confirm_email_title">Confirm email</string>
    <string name="message_confirm_email_body">Please confirm email so you could proceed with creating profile.</string>
    <string name="choose_mail_client">Choose Email app to open</string>
    <string name="favorites_placeholder">Favorites</string>
    <string name="share_to_placeholder">Share to:</string>
    <string name="no_details_available">No details available for this movie</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="previous">Previous</string>
    <string name="page">Page</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="unknown_error">Unknown error</string>
    <string name="trailers_not_fetched">Unable to fetch trailer</string>
    <string name="error_sharing_poster">Error sharing poster</string>
    <string name="error_post_as_favorite">Unable to mark as favorite</string>
    <string name="network_error">Network error</string>
    <string name="error_peek_is_favorite">Couldn\'t see if this movie is your favorite</string>
    <string name="could_not_load_trailer">Couldn\'t load trailer</string>
</resources>