<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_100"
            android:text="Change password"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOldPassword"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:hint="@string/old_password"
            android:paddingTop="@dimen/large_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOldPassword"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPassword"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilOldPassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPasswordConfirm"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:hint="@string/new_password_confirm"
            android:paddingBottom="@dimen/large_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilNewPassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPasswordConfirm"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_100"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@id/tilNewPasswordConfirm"
            app:layout_constraintTop_toBottomOf="@id/tilNewPasswordConfirm" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_100"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="@id/tilNewPasswordConfirm"
            app:layout_constraintTop_toBottomOf="@id/tilNewPasswordConfirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>