<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.screenbindger.view.fragment.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivScreenBindger"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/large_100"
            android:src="@drawable/ic_screen_bindger"
            app:layout_constraintBottom_toTopOf="@+id/tilUserEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserEmail"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tilUserPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivScreenBindger"
            app:startIconDrawable="@drawable/ic_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.user.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserPassword"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserEmail"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserPassword"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewModel.user.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_100"
            android:onClick="@{() -> viewModel.onboarding()}"
            android:text="@string/login_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tvAlreadyHaveAccount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="@dimen/large_100"
            android:text="@string/do_not_have_account_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHere"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_placeholder"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvAlreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount"
            app:layout_constraintTop_toTopOf="@id/tvAlreadyHaveAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>