<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.screenbindger.view.fragment.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.register.RegisterFragment">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivScreenBindger"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/tvScreenBindgerText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvScreenBindgerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_100"
            android:text="Screen Bindger"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintBottom_toTopOf="@id/tilUserFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivScreenBindger" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserFullName"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_required_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tilUserEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScreenBindgerText"
            app:startIconDrawable="@drawable/ic_profile_filled_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserFullName"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text="@={viewModel.user.fullName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserEmail"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_required_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tilUserPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserFullName"
            app:startIconDrawable="@drawable/ic_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserEmail"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.user.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserPassword"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_required_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/tilUserDateOfBirth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserEmail"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserPassword"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewModel.user.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserDateOfBirth"
            style="@style/Widget.ScreenBindger.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserPassword"
            app:startIconDrawable="@drawable/ic_calendar_24">

            <com.example.screenbindger.view.custom.edittext.DatePickerEditText
                android:id="@+id/etUserDateOfBirth"
                style="@style/Widget.ScreenBindger.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:text="@={viewModel.user.dateOfBirth}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.ScreenBindger.Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_100"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/register_placeholder"
            app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAccount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUserDateOfBirth" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_100"
            android:text="@string/already_have_an_account_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHere"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_placeholder"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvAlreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount"
            app:layout_constraintTop_toTopOf="@id/tvAlreadyHaveAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>